@@ -1,3 +1,9 @@
+2003-07-01 16:37  Alexander Malmberg <alexander@malmberg.org>
+
+	* Source/art/ftfont.m: Use the correct set of flags when loading
+	glyphs for freetype >=2.1.3. Anti-alias by default if there is no
+	defaults value for GSFontAntiAlias.
+
 2003-06-30 18:11  Alexander Malmberg <alexander@malmberg.org>
 
 	* Source/xlib/XGFont.m (-xCharStructForGlyph:):	Don't try to treat
